<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.register">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="40dp"
                android:gravity="center"
                android:text="@string/register"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                android:textSize="30sp" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                app:endIconMode="clear_text"
                app:startIconDrawable="@drawable/person_24"
                android:layout_height="wrap_content"
                app:hintTextColor="@color/black"
                app:boxStrokeColor="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:inputType="text"
                    android:lines="1"
                    android:layout_height="wrap_content"
                    android:hint="@string/full_name" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                app:endIconMode="clear_text"
                app:startIconDrawable="@drawable/phone_24"
                app:hintTextColor="@color/black"
                app:boxStrokeColor="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lines="1"
                    android:inputType="number"
                    android:hint="@string/phone" />

            </com.google.android.material.textfield.TextInputLayout>




            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:id="@+id/registerBtn"
                android:layout_marginTop="50dp"
                android:text="@string/register" />


        </LinearLayout>


    </ScrollView>


</LinearLayout>